# Filen-MCP

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci-lint.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
src/: config.rs  main.rs
src/login/: mod.rs
src/serve/: mod.rs
src/tools/: mod.rs
